--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,253 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.nav-menu {
+  overflow: hidden;
+  background-color: #333;
+  border-style: groove;
+  border-width: 5px;
+}
+.nav-menu a {
+  float: left;
+  display: block;
+  padding: 20px 30px;
+
+  text-decoration: none;
+}
+/* styles the wandering-souls prospecting logo above the nav bar */
+.header-container {
+  display: flex;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center;
+  padding: 30px;
+  background-size: cover;
+  background-image: url("../public/images/logo-background.jpg");
+}
+.logo {
+  width: 400px;
+  height: 400px;
+
+  border-style: ridge;
+  border-radius: 5px;
+  border-width: 10px;
+}
+.nav-item {
+}
+.nav-item :hover {
+  box-shadow: 0 10px 30px 0 rgba(240, 240, 241, 0.993);
+  border-radius: 10px;
+  transform: scale(0.9);
+  background-color: cadetblue;
+}
+/* styles the buttons in navigation bar */
+.nav-buttons {
+  background-color: azure;
+  color: #333;
+  font-size: 210%;
+  border-radius: 10px;
+  margin: 40px;
+}
+/* assigns hover to navbar buttons */
+.nav-buttons :hover {
+  box-shadow: 0 10px 30px 0 rgba(240, 240, 241, 0.993);
+  background-color: gold;
+  border-radius: 10px;
+  transform: scale(1.2);
+}
+.landing-tab-header {
+  border-style: ridge;
+  border-width: 7px;
+  padding: 30px;
+  border-radius: 3px;
+  background-color: rgb(213, 138, 39);
+  padding-bottom: 40px;
+  text-align: center;
+  margin: 20px;
+
+  color: aliceblue;
+}
+.landing-tab-text {
+  border-style: ridge;
+  border-width: 7px;
+  padding: 30px;
+  border-radius: 3px;
+  background-color: rgb(94, 85, 74);
+  padding-bottom: 40px;
+  text-align: center;
+  margin: 20px;
+  /* margin-bottom: 100px; */
+  color: aliceblue;
+}
+.landing-tab-wrapper {
+  background-color: antiquewhite;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* this styles the header at the top of the page and text */
+.footer {
+  background-image: url(https://t4.ftcdn.net/jpg/00/59/95/89/360_F_59958917_1SvEPqvKnrGr68THJ35hqQUiHwQ6WhCN.jpg);
+  background-size: cover;
+  background-image: contain;
+
+  margin: 1px;
+  border-style: ridge;
+  border-width: 10px;
+  margin: 0 auto;
+}
+
+.footer-text {
+  text-align: center;
+  color: azure;
+  padding-top: 5rem;
+  font-size: 100%;
+}
+
+/* styles row in navbar */
+.row {
+  display: flex;
+  justify-content: space-between;
+}
+/* styling for carousel elements */
+.carousel {
+  width: 650px;
+  height: 440px;
+}
+.carousel-image {
+  width: 650px;
+  height: 440px;
+  border-style: ridge;
+  border-width: 10px;
+}
+.carousel-image img {
+  /* max-width: auto; */
+  /* max-height: auto; */
+  /* display: block; */
+  /* margin: 0 auto;  */
+}
+/* adjusts the carousel on left of home landing page */
+.carousel-wrapper {
+}
+/* ****STYLING FOR GUIDE PAGE */
+/* adjusts images on guide page */
+.guide-images {
+  width: 400px;
+  height: 650px;
+}
+/* adjusts the image inside the container */
+.guide-image-container {
+  display: flex;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center;
+  /* margin: 30px; */
+}
+/*  */
+.guide-header-text {
+  border-style: ridge;
+  border-width: 7px;
+  padding: 30px;
+  border-radius: 3px;
+  background-color: rgb(213, 138, 39);
+  padding-bottom: 40px;
+  text-align: center;
+  margin: 20px;
+  margin-bottom: 100px;
+  color: aliceblue;
+}
+/* targets resource links on guide page  */
+.guide-link-buttons {
+  background-color: rgb(126, 61, 74);
+  font-style: oblique;
+  padding: 15px;
+  margin: 30px;
+  border-radius: 10px;
+}
+/* targets text inside of buttons on guide page */
+.guide-link-text {
+  color: aliceblue;
+  font-style: oblique;
+}
+/* targets guide button wrapper */
+.guide-link-btn-wrapper {
+  display: flex;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center;
+}
+
+.gpaa-link-wrapper {
+  border-style: ridge;
+  border-width: 7px;
+  padding: 30px;
+  border-radius: 3px;
+  background-color: antiquewhite;
+  padding-bottom: 40px;
+}
+/* targets gpaa button on guide page */
+.gpaa-button {
+  /* background-color: cadetblue; */
+  background-image: url("/public/images/GPAA-logo.png");
+  border-radius: 10px;
+  width: 350px;
+  height: 109px;
+}
+.gpaa-button :hover {
+  box-shadow: 0 10px 30px 0 rgba(240, 240, 241, 0.993);
+  /* background-color: gold; */
+  border-radius: 10px;
+  transform: scale(1.2);
+}
+.gpaa-title {
+  color: rgb(213, 138, 39);
+}
+.gpaa-button-image {
+  width: 340px;
+  height: 108px;
+  border-radius: 10px;
+}
+/* discoveries page  */
+#base64Code {
+  visibility: hidden;
+}
+/* submit button on discoveries page */
+.submit-button {
+  margin-left: 41%;
+  margin-bottom: 150px;
+  background-color: crimson;
+  width: 200px;
+  height: 100px;
+  border-radius: 5px;
+  color: aliceblue;
+}
+.submit-button:hover {
+  color: aliceblue;
+  background-color: rgb(103, 184, 23);
+  transform: scale(1.2);
+}
+/* form wrapper */
+.discoveries-form-wrapper {
+  background-color: rgb(213, 138, 39);
+  border-style: ridge;
+  border-width: 10px;
+  border-radius: 5px;
+}
+.discoveries-card-wrapper {
+  border-style: inset;
+  border-width: 5px;
+  background-color: antiquewhite;
+}
+.discoveries-card {
+  box-shadow: 5px 5px rgb(70, 74, 75);
+  padding: 20px;
+  margin: 15px;
+}
+/* this styles the edit button inside the accordion */
+.edit-button {
+  border-radius: 2rem;
+  background-color: cadetblue;
+  margin: 19px;
+  padding: 6%;
+  margin-left: 24%;
+}
+/* styles remove post button */
+.delete-button {
+  border-radius: 5px;
+  background-color: crimson;
+  margin: 19px;
+  padding: 6%;
+  margin-left: 14%;
 }
